--- a/botconfig.json
+++ b/botconfig.json
@@ -1,6 +1,6 @@
 {
-    "token":"BOT_TOKEN",
-    "prefix" : "",
+    "token":"NTI4OTA4ODY5NDkwMTgwMTE2.XQzSIg.1sNFAiPpNeyL7MTWa0SAwHDZNKI",
+    "prefix" : "b!",
   "cleverbot_user": "yAQuCnEmPcp58o9M",
 	"cleverbot_key": "gx7YIDvTxHTz9XpqlyMA8y9ignLxITIq",
   "logbotchannel": "logging",
