--- a/botconfig.json
+++ b/botconfig.json
@@ -1,5 +1,5 @@
 {
-    "token":"NTI4OTA4ODY5NDkwMTgwMTE2.XQzSIg.1sNFAiPpNeyL7MTWa0SAwHDZNKI",
+    "token":"",
     "prefix" : "b!",
   "cleverbot_user": "yAQuCnEmPcp58o9M",
 	"cleverbot_key": "gx7YIDvTxHTz9XpqlyMA8y9ignLxITIq",
